Measure heap pressure instead of guessing from resident memory
Resident memory cannot answer whether a server needs more RAM: the JVM starts
with -Xms equal to -Xmx, so the whole heap is committed at startup and a 2GB
heap looks like ~2.7GB resident whether the server is busy or idle.

- Write logs/gc.log for every server and report the live set (occupancy right
  after a collection), peak usage, full GCs and the longest pause
- Turn that into a verdict with a suggested heap, shown in Connection Health
- Refuse a heap that leaves no headroom under the container memory limit: the
  JVM needs roughly a third more than its heap, and a limit set to the heap gets
  it killed by the kernel instead of reporting an out-of-memory error

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>